# BirdMOT-Tracking

./: README.md  pyproject.toml  sahi_tracking.py
src/mot_viewer/streamlit_ui/: Home.py
src/sahi_tracking/: predict.py  sahi_tracking.py  trackeval_evaluation.py  tracking.py
src/sahi_tracking/background_substraction/: backsub.py  backsub_mot.py  common.py  frame_diff.py
src/sahi_tracking/evaluation/: trackeval_evaluation.py  trackeval_plotting.py  trackeval_utils.py
src/sahi_tracking/experiments_framework/: DataStatePersistance.py  dataset_creation.py  evaluation_result_creation.py  predictions_creation.py  run_experiment_framework.py  tracking_result_creation.py  utils.py
src/sahi_tracking/formats/: cocovid.py  cocovid2mot.py  mot_format.py
src/sahi_tracking/helper/: config.py  misc.py
src/sahi_tracking/track_to_Detect/: bs_track_eval.py
src/sahi_tracking/trackers/: ByteTrack.py  norfair_tracker.py  oc_sort_tracker.py  ocsorttracker.py  sort_tracker.py  viou_tracker.py
src/sahi_tracking/trajectories/: TrajectoryClassifier.py  from_mot.py  traj_analysis.py
src/sahi_tracking/utils/: stats.py  viz.py
src/sahi_tracking_streamlit/: Home.py  experiment_selection.py  helper.py  load_data.py
src/sahi_tracking_streamlit/ui_components/: dataframes.py  video.py
src/sahi_tracking_tuning/: param_spaces.py  tune_tracker.py
src/sahi_tracking_tuning/backsub_tuning/: param_spaces.py  tune_backsub.py
src/sahi_tracking_tuning/tracker_tuning/: tune_tracker.py
tests/: conftest.py
tests/fixtures/: fixtures.py
tests/fixtures/local_data/config/sahi_models/: yolov8n.json
tests/fixtures/local_data/config/sahi_prediction_params/: test_prediction_params.json
tests/fixtures/local_data/config/tracking_dataset/: test_dataset_config.json
tests/fixtures/local_data/config/tracking_datasets/: test_dataset_config.json
tests/fixtures/local_data/config/tracking_experiments/: test_tracking_experiment_bytetrack.json  test_tracking_experiment_ocsort.json  test_tracking_experiments.json
tests/fixtures/local_data/dataset/cocovid/coco_files/: C0054_783015_783046_scalabel_converted_coco_format_track_box.json
tests/fixtures/local_data/dataset/cocovid/images/good_04_2021/C0054_783015_783046/: C0054_783015_783046-783015.txt  C0054_783015_783046-783016.txt  C0054_783015_783046-783017.txt  C0054_783015_783046-783018.txt  C0054_783015_783046-783019.txt  C0054_783015_783046-783020.txt  C0054_783015_783046-783021.txt  C0054_783015_783046-783022.txt  C0054_783015_783046-783023.txt  C0054_783015_783046-783024.txt  C0054_783015_783046-783025.txt  C0054_783015_783046-783026.txt  C0054_783015_783046-783027.txt  C0054_783015_783046-783028.txt  coco_dataset.json  (+10 more)
tests/unit/: test_cocovid.py  test_cocovid2mot.py  test_dataset_creation.py  test_evaluation_result_creation.py  test_predictions_creation.py  test_trackers.py  test_trackeval_plotting.py  test_trackeval_utils.py  test_tracking_result_creation.py  test_viz.py
