[tool.poetry]
name = "sahi-tracking"
version = "0.1.0"
description = ""
authors = ["jokober <glpat-xy-QA7sDBF1125TDuaBe>"]
readme = "README.md"

packages = [{include = "sahi_tracking", from = "src"}]

[tool.poetry.dependencies]
python =  ">3.9.7, <3.10" # limitation because of streamlit streamlit
sahi = "^0.11.14"
pytest = "^7.4.2"
torch = "==2.0.0" # limited because of this issue https://github.com/pytorch/pytorch/issues/100974
ultralytics = "^8"
Pillow = "^10.0.0"
numpy = "1.23.5" # limited because of ByteTrack https://github.com/ifzhang/ByteTrack/issues/330
scikit-image = "^0.21.0"
cython = "^3.0.2"
norfair = "^2.2.0"
trackeval = { git = "https://github.com/jokober/TrackEval"}
#viou = { git = "https://github.com/bochinski/iou-tracker/"}
deepdiff = "^6.6.0"
tabulate = "^0.9.0"
opencv_python = "*"
loguru = "*"
tqdm = "*"
torchvision = ">=0.10.0"
thop = "*"
ninja = "*"
tensorboard = "*"

# motmetrics # now we use the local and customized version instead
filterpy = "*"
h5py = "*"

# verified versions
#onnx = "==1.12.0"
#onnxruntime = "==1.12.0"
#onnx-simplifier = "==0.3.5"
plotly = "^5.18.0"
distinctipy = "^1.2.3"
yupi = "^0.12.3"
pactus = "^0.4.2"
lapsolver = "^1.1.0"
opencv-contrib-python = "^4.8.1.78"
ray = "^2.8.0"
lightgbm = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

